--- a/.github/workflows/deploy_site_s3.yml
+++ b/.github/workflows/deploy_site_s3.yml
@@ -55,7 +55,7 @@ jobs:
       
       - name: Set variable in config
         run: |
-          website_endpoint=$(terraform -chdir="terraform" -var-file "tmp_variables.tfvars" output -raw website_endpoint)
+          website_endpoint=$(terraform -chdir="terraform" output -raw website_endpoint)
           echo -e "\naws_s3_url: https://$website_endpoint
           url: https://$website_endpoint
           domain: https://$website_endpoint" >> docs/_config.yml
