--- a/.github/workflows/deploy_site_s3.yml
+++ b/.github/workflows/deploy_site_s3.yml
@@ -69,6 +69,8 @@ jobs:
       - name: Terraform Plan Status
         if: steps.terraform_plan.outcome == 'failure'
         run: exit 1
+      - name: Terraform Apply (retrieve outputs)
+        run: terraform -chdir="terraform" apply -auto-approve -input=false -var-file "tmp_variables.tfvars"
       - name: Set variable in config
         run: |
           website_endpoint=$(terraform -chdir="terraform" output -raw website_endpoint)
@@ -88,5 +90,5 @@ jobs:
         with:
           name: Resume website
           path: _site/**
-      - name: Terraform Apply
+      - name: Terraform Apply (deploy website)
         run: terraform -chdir="terraform" apply -auto-approve -input=false -var-file "tmp_variables.tfvars"
