--- a/.github/workflows/clean_site_s3.yml
+++ b/.github/workflows/clean_site_s3.yml
@@ -27,5 +27,7 @@ jobs:
         id: terraform_init
       - name: Try to import bucket if it does already exists (to prevent error)
         run: terraform -chdir="terraform" import -var-file "tmp_variables.tfvars" aws_s3_bucket.main_bucket "${{ steps.tfvars_file.outputs.bucket_name }}" || true
+      - name: Terraform Apply (Prevent BucketNotEmpty error at destroy)
+        run: terraform -chdir="terraform" apply -auto-approve -input=false -var-file "tmp_variables.tfvars"
       - name: Terraform destroy
         run: terraform -chdir="terraform" destroy -auto-approve -var-file "tmp_variables.tfvars"
