--- a/.github/workflows/build_pdf_send_s3.yml
+++ b/.github/workflows/build_pdf_send_s3.yml
@@ -1,31 +1,18 @@
-name: build_pdf
+name: Build pdf files
 on:
-  push:
-    branches:
-      - master
-      - develop
-    paths:
-      - 'docs/**'
   workflow_call:
+    inputs:
+      URL:
+        type: string
+        required: true
+      AWS_S3_BUCKET:
+        type: string
+        required: true
 
 env:
   SCRIPT_PATH: /home/puppeteer_build_pdf.js
 
 jobs:
-  set_environment_name:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Some check on branch
-        id: branch_check
-        run: |
-          echo "Running on branch ${{ github.ref }}"
-          if [ "${{ github.ref }}" = "refs/heads/master" ]; then
-            echo "::set-output name=env_name::Production"
-          else
-            echo "::set-output name=env_name::Staging"
-          fi
-    outputs:
-      environment_name: ${{ steps.branch_check.outputs.env_name }}
   build_pdf_files:
     runs-on: ubuntu-latest
     container: 
@@ -35,15 +22,15 @@ jobs:
         with:
           fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
       - name: Build FR pdf
-        run: node ${{ env.SCRIPT_PATH }} language=fr
+        run: node ${{ env.SCRIPT_PATH }} language=fr url=${{ inputs.URL }}
       - name: Build EN pdf
-        run: node ${{ env.SCRIPT_PATH }} language=en
+        run: node ${{ env.SCRIPT_PATH }} language=en url=${{ inputs.URL }}
       - name: Archive PDF files
         uses: actions/upload-artifact@v3
         with:
           name: pdf-files
           path: /home/*.pdf
-  upload_pdf_to_s3:
+upload_pdf_to_s3:
     runs-on: ubuntu-latest
     needs:
       - build_pdf_files
@@ -66,6 +53,6 @@ jobs:
         with:
           name: pdf-files
       - name: Upload FR pdf
-        run: aws s3 cp fr.pdf s3://${{ secrets.AWS_S3_BUCKET }} --profile ${{ needs.set_environment_name.outputs.environment_name }}
+        run: aws s3 cp fr.pdf s3://${{ inputs.AWS_S3_BUCKET }} --profile ${{ needs.set_environment_name.outputs.environment_name }}
       - name: Upload EN pdf
-        run: aws s3 cp en.pdf s3://${{ secrets.AWS_S3_BUCKET }} --profile ${{ needs.set_environment_name.outputs.environment_name }}
+        run: aws s3 cp en.pdf s3://${{ inputs.AWS_S3_BUCKET }} --profile ${{ needs.set_environment_name.outputs.environment_name }}
