--- a/.github/workflows/build_pdf_send_s3.yml
+++ b/.github/workflows/build_pdf_send_s3.yml
@@ -8,6 +8,9 @@ on:
       AWS_S3_BUCKET:
         type: string
         required: true
+      ENVIRONMENT_NAME:
+        type: string
+        required: true
 
 env:
   SCRIPT_PATH: /home/puppeteer_build_pdf.js
@@ -34,25 +37,24 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build_pdf_files
-      - set_environment_name
     container:
       image: amazon/aws-cli
     environment:
-      name: ${{ needs.set_environment_name.outputs.environment_name }}
+      name: ${{ inputs.ENVIRONMENT_NAME }}
     env: 
       AWS_EC2_METADATA_DISABLED: true
     steps:
       - name: Register with credentials
         run: |
-          aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}" --profile ${{ needs.set_environment_name.outputs.environment_name }}
-          aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}" --profile ${{ needs.set_environment_name.outputs.environment_name }}
-          aws configure set region "${{ secrets.AWS_DEFAULT_REGION }}" --profile ${{ needs.set_environment_name.outputs.environment_name }}
-          aws configure set output "${{ secrets.AWS_DEFAULT_OUTPUT }}" --profile ${{ needs.set_environment_name.outputs.environment_name }}
+          aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}" 
+          aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+          aws configure set region "${{ secrets.AWS_DEFAULT_REGION }}"
+          aws configure set output "${{ secrets.AWS_DEFAULT_OUTPUT }}"
       - name: Download a single artifact
         uses: actions/download-artifact@v3
         with:
           name: pdf-files
       - name: Upload FR pdf
-        run: aws s3 cp fr.pdf s3://${{ inputs.AWS_S3_BUCKET }} --profile ${{ needs.set_environment_name.outputs.environment_name }}
+        run: aws s3 cp fr.pdf s3://${{ inputs.AWS_S3_BUCKET }}
       - name: Upload EN pdf
-        run: aws s3 cp en.pdf s3://${{ inputs.AWS_S3_BUCKET }} --profile ${{ needs.set_environment_name.outputs.environment_name }}
+        run: aws s3 cp en.pdf s3://${{ inputs.AWS_S3_BUCKET }}
