--- a/.github/workflows/build_pdf_send_s3.yml
+++ b/.github/workflows/build_pdf_send_s3.yml
@@ -14,6 +14,8 @@ on:
 
 env:
   SCRIPT_PATH: /home/puppeteer_build_pdf.js
+  URL_DEBUG: ${{ inputs.URL }}
+  ENV_DEBUG: ${{ inputs.ENVIRONMENT_NAME }}
 
 jobs:
   build_pdf_files:
