--- a/.github/workflows/deploy_site_s3.yml
+++ b/.github/workflows/deploy_site_s3.yml
@@ -59,6 +59,7 @@ jobs:
       - name: Try to import bucket if it does already exists (to prevent error)
         run: terraform -chdir="terraform" import -var-file "tmp_variables.tfvars" aws_s3_bucket.main_bucket "${{ steps.tfvars_file.outputs.bucket_name }}"
         continue-on-error: true
+        id: terraform_import
       - name: Terraform plan
         run: terraform -chdir="terraform" plan -no-color -input=false -var-file "tmp_variables.tfvars"
         id: terraform_plan
@@ -96,6 +97,10 @@ jobs:
       - name: Terraform Plan Status
         if: steps.terraform_plan.outcome == 'failure'
         run: exit 1
+      # We need to apply 2 times to be able to retrieve the output if it is the first time we used this bucket (then it's created)
+      - name: Terraform Apply (Only first time to creates bucket)
+        run: terraform -chdir="terraform" apply -auto-approve -input=false -var-file "tmp_variables.tfvars"
+        if: steps.terraform_import.outcomre == 'failure'
       - name: Terraform Apply (retrieve outputs)
         run: terraform -chdir="terraform" apply -auto-approve -input=false -var-file "tmp_variables.tfvars"
       - name: Set variable in config
