--- a/.github/workflows/deploy_site_s3.yml
+++ b/.github/workflows/deploy_site_s3.yml
@@ -100,7 +100,7 @@ jobs:
       # We need to apply 2 times to be able to retrieve the output if it is the first time we used this bucket (then it's created)
       - name: Terraform Apply (Only first time to creates bucket)
         run: terraform -chdir="terraform" apply -auto-approve -input=false -var-file "tmp_variables.tfvars"
-        if: steps.terraform_import.outcomre == 'failure'
+        if: steps.terraform_import.outcome == 'failure'
       - name: Terraform Apply (retrieve outputs)
         run: terraform -chdir="terraform" apply -auto-approve -input=false -var-file "tmp_variables.tfvars"
       - name: Set variable in config
