--- a/.github/workflows/clean_site_s3.yml
+++ b/.github/workflows/clean_site_s3.yml
@@ -2,7 +2,6 @@ name: Clean deployed s3 site after PR closed
 on:
   pull_request:
     types: [closed]
-  workflow_call:
 
 env:
   BASE_NAME_BUCKET: corentin-ducatez-resume-bucket
@@ -16,8 +15,9 @@ jobs:
       - name: Checkout files
         uses: actions/checkout@v3
       - name: Prepare tfvars file with needed variables
+        # Important to use github.head_ref (base branch) rather than github.ref_name (destination branch)
         run: |
-          raw_bucket_name="${{ env.BASE_NAME_BUCKET }}-${{ github.ref_name }}"
+          raw_bucket_name="${{ env.BASE_NAME_BUCKET }}-${{ github.head_ref }}"
           echo "::set-output name=bucket_name::${raw_bucket_name////-}"
           echo "aws_credential = {
               AWS_ACCESS_KEY_ID     = \"${{ secrets.AWS_ACCESS_KEY_ID }}\"
