--- a/.github/workflows/clean_site_s3.yml
+++ b/.github/workflows/clean_site_s3.yml
@@ -7,6 +7,14 @@ env:
   BASE_NAME_BUCKET: corentin-ducatez-resume-bucket
 
 jobs:
+  debug:
+    environment: staging
+    runs-on: ubuntu-latest
+    steps:
+      - name: "Debug"
+        run: echo "$GITHUB_CONTEXT" 
+      - name: "Debug 2"
+        run: echo "${{ github.event.base.ref }} ${{ github.ref_name }} ${{ github.head_ref }} ${{ github.event.head.ref }}"
   terraform:
     environment: staging
     runs-on: ubuntu-latest
@@ -15,9 +23,9 @@ jobs:
       - name: Checkout files
         uses: actions/checkout@v3
       - name: Prepare tfvars file with needed variables
-        # Important to use github.head_ref (base branch) rather than github.ref_name (destination branch)
+        # Important to use github.event.base.ref (base branch) rather than github.ref_name (destination branch)
         run: |
-          raw_bucket_name="${{ env.BASE_NAME_BUCKET }}-${{ github.head_ref }}"
+          raw_bucket_name="${{ env.BASE_NAME_BUCKET }}-${{ github.event.base.ref }}"
           echo "::set-output name=bucket_name::${raw_bucket_name////-}"
           echo "aws_credential = {
               AWS_ACCESS_KEY_ID     = \"${{ secrets.AWS_ACCESS_KEY_ID }}\"
