--- a/.github/workflows/clean_site_s3.yml
+++ b/.github/workflows/clean_site_s3.yml
@@ -12,9 +12,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "Debug"
-        run: echo "$GITHUB_CONTEXT" 
+        run: echo "${{ github }}" 
       - name: "Debug 2"
-        run: echo "${{ github.event.base.ref }} ${{ github.ref_name }} ${{ github.head_ref }} ${{ github.event.head.ref }}"
+        run: echo "${{ github.event.pull_request.base.ref }} // ${{ github.ref_name }} // ${{ github.head_ref }} // ${{ github.event.pull_request.head.ref }}"
+      - name: "Debug 3"
+        run: echo "${{ github.event }}" 
   terraform:
     environment: staging
     runs-on: ubuntu-latest
@@ -25,7 +27,7 @@ jobs:
       - name: Prepare tfvars file with needed variables
         # Important to use github.event.base.ref (base branch) rather than github.ref_name (destination branch)
         run: |
-          raw_bucket_name="${{ env.BASE_NAME_BUCKET }}-${{ github.event.base.ref }}"
+          raw_bucket_name="${{ env.BASE_NAME_BUCKET }}-${{ github.event.pull_request.base.ref }}"
           echo "::set-output name=bucket_name::${raw_bucket_name////-}"
           echo "aws_credential = {
               AWS_ACCESS_KEY_ID     = \"${{ secrets.AWS_ACCESS_KEY_ID }}\"
