--- a/.github/workflows/clean_site_s3.yml
+++ b/.github/workflows/clean_site_s3.yml
@@ -11,8 +11,8 @@ jobs:
     environment: staging
     runs-on: ubuntu-latest
     steps:
-      - name: "Debug"
-        run: echo "${{ github }}" 
+      - name: "Debug 1"
+        run: echo "${{ toJSON(github) }}" 
       - name: "Debug 2"
         run: echo "${{ github.event.pull_request.base.ref }} // ${{ github.ref_name }} // ${{ github.head_ref }} // ${{ github.event.pull_request.head.ref }}"
       - name: "Debug 3"
