--- a/.github/workflows/deploy_site_s3.yml
+++ b/.github/workflows/deploy_site_s3.yml
@@ -8,6 +8,7 @@ on:
       - 'terraform/**'
       - 'docs/**'
   pull_request:
+    types: [ opened, synchronize ]
 
 env:
   BASE_NAME_BUCKET: corentin-ducatez-resume-bucket
