Set the PR branch name manually and remove debug prints

--- a/.github/workflows/clean_site_s3.yml
+++ b/.github/workflows/clean_site_s3.yml
@@ -5,22 +5,19 @@ on:
 
 env:
   BASE_NAME_BUCKET: corentin-ducatez-resume-bucket
+  PR_REF_NAME: "${{ github.event.pull_request.number }}/merge"
 
 jobs:
   terraform:
     environment: staging
     runs-on: ubuntu-latest
     steps:
-      - name: "Debug 1"
-        run: echo "${{ github.event.pull_request.base.ref }} // ${{ github.ref_name }} // ${{ github.head_ref }} // ${{ github.event.pull_request.head.ref }}"
       - uses: hashicorp/setup-terraform@v2
       - name: Checkout files
         uses: actions/checkout@v3
-      - name: "Debug 2"
-        run: echo "${{ github.event.pull_request.base.ref }} // ${{ github.ref_name }} // ${{ github.head_ref }} // ${{ github.event.pull_request.head.ref }}"
       - name: Prepare tfvars file with needed variables
         run: |
-          raw_bucket_name="${{ env.BASE_NAME_BUCKET }}-${{ github.ref_name }}"
+          raw_bucket_name="${{ env.BASE_NAME_BUCKET }}-${{ env.PR_REF_NAME }}"
           echo "::set-output name=bucket_name::${raw_bucket_name////-}"
           echo "aws_credential = {
               AWS_ACCESS_KEY_ID     = \"${{ secrets.AWS_ACCESS_KEY_ID }}\"
