--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,7 +28,8 @@ url: "https://wasta-geek.github.io/curriculum-vitae" # the base hostname & proto
 github_username:  wasta-geek
 
 # Will get override by github action
-aws_s3_url: https://corentin-ducatez-resume-bucket-production.s3.eu-west-3.amazonaws.com
+# [WARN] It's not overriden for classic build/publish as it is managed by github
+aws_s3_url: https://corentin-ducatez-resume-bucket-master.s3.eu-west-3.amazonaws.com
 
 seek_a_job: true
 
