--- a/.github/workflows/build_pdf_send_s3.yml
+++ b/.github/workflows/build_pdf_send_s3.yml
@@ -37,12 +37,18 @@ jobs:
     needs:
       - build_pdf_files
     container:
-      image: amazon/aws-cli
+      image: node:23-bullseye
     environment:
       name: ${{ inputs.ENVIRONMENT_NAME }}
     env: 
       AWS_EC2_METADATA_DISABLED: true
     steps:
+      - name: Install AWS cli
+        uses: unfor19/install-aws-cli-action@v1
+        with:
+          version: 2
+          verbose: false
+          arch: amd64  
       - name: Register with credentials
         run: |
           aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}" --profile ${{ inputs.ENVIRONMENT_NAME }}
